--- a/BreadthFirstSearches.asmdef
+++ b/BreadthFirstSearches.asmdef
@@ -1,7 +1,9 @@
 {
-    "name": "BFS",
+    "name": "BreadthFirstSearches",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:8f8d79523ceea0b47978bd67b3cb5d1b"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
